some tweaks and trying to bug fixes on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 body {
-  background: #fff;
-  font-family: 'Delius', cursive;
+  background: whitesmoke;
+  font-family: "Verdana","Geneva","sans-serif";
 }
 
 #root {
